[package]
name = "clsag"
version = "0.3.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com"]
description = "Compact Linkable Spontaneous Anonymous Group construction"
license = "BSD-3-Clause"
repository = "https://github.com/crate-crypto/CLSAG"
edition = "2018"

[dependencies]
curve25519-dalek = { version = "1.2.3", features = ["serde"] }
rand = "0.6.0"
sha2 = "0.8"
merlin = "1.2.0"
